--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Canadian poetry'
+- GITenberg
 tableOfContents: In the north -- A road song in may -- The landsman -- The ghost --
   A song in August -- To autumn -- Three grey days -- The watch -- The seekers --
   Fellowship -- The lodger -- March wind.
